# GTAngelEcho

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: gtangelecho.yaml
docs/: architecture.md  extension-architecture.md  fifteen-properties.md  ksm-evolution.md  ksm_evolution_report_20260528_122000.json  property_coherence_report.json
plugins/: __init__.py
plugins/examples/: aggression_modulator.py  expression_snapshot.py  telemetry_logger.py
references/: centers.md
scripts/: ksm_evolve.py  property_coherence.py
src/avatar/: embodiment.py
src/cognitive/: memory.py
src/deep-tree-echo/: cognitive_loop.py
src/endocrine/: system.py
src/extensions/: __init__.py  api_adapter.py  event_bus.py  hooks.py  plugin_registry.py
src/gtangel/: __init__.py  angel_echo.py  navigation.py
src/mlgamer/: trainer.py
src/reservoir/: esn.py
src/superhotgirl/: expression_demo.py
tests/: test_cycle3_fixes.py  test_extensions.py  test_integration.py  test_mlgamer.py  test_reservoir.py
