[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtangelecho"
version = "0.1.0"
description = "GTAngel + DeepTreeEcho: Cognitive gaming architecture with SuperHotGirl aesthetics and MLGamer intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HyperCogWizard"}
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "networkx>=3.1",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/HyperCogWizard/GTAngelEcho"
Repository = "https://github.com/HyperCogWizard/GTAngelEcho"

[tool.setuptools.packages.find]
where = ["src"]
